--- a/E3/New folder/style.css
+++ b/E3/New folder/style.css
@@ -6,11 +6,11 @@ header [class]{
     color: red;
 }
 
-a:visited {/* سایت هایی که قبلا دیده شده و به رنگ بنفش نمایش داده میشد  */
+.visit a:visited {/* سایت هایی که قبلا دیده شده و به رنگ بنفش نمایش داده میشد  */
     color: #ccc;
 
 }
 
-a:link {/* سایت هایی که دیده نشده  */
+.visit a:link {/* سایت هایی که دیده نشده  */
     color:rgb(71, 107, 78)
 }
