focus in the input

--- a/E3/New folder/style.css
+++ b/E3/New folder/style.css
@@ -14,3 +14,8 @@ header [class]{
 .visit a:link {/* سایت هایی که دیده نشده  */
     color:rgb(71, 107, 78)
 }
+
+input:focus {/* وفتی روش کلیک بکنم  */
+    background-color: springgreen;
+}
+
