--- a/E3/New folder/style.css
+++ b/E3/New folder/style.css
@@ -22,3 +22,9 @@ input:focus {/* وفتی روش کلیک بکنم  */
 span:active {/* زمانی که روی متن سلکت میکنیم رنگش عوض میشه  */
     color: blueviolet;
 }
+
+h4:hover{
+    color: white;
+    background-color: black;
+    cursor: pointer;
+}
