--- a/E4/style.css
+++ b/E4/style.css
@@ -1,1 +1,16 @@
+[class]{
 
+}
+****************************************************************
+[class="amir"] = .amir{
+
+}
+****************************************************************
+p .amir = p [class="amir"]{/* کلاس های امیر تگ پی */
+
+}
+****************************************************************
+input[type="text"]{
+
+}
+****************************************************************
