--- a/E4/style.css
+++ b/E4/style.css
@@ -14,3 +14,18 @@ input[type="text"]{
 
 }
 ****************************************************************
+a[target="_blink"]{
+
+}
+****************************************************************
+a[href="google.com"]{
+
+}
+****************************************************************
+a[href^="htpps://"]{
+/* برو ای هایی پیدا که با اچ تی پی پی اس شروع میشود */
+}
+****************************************************************
+a[href$".html"]{
+/* برو ای هایی را پیدا کن که با دات اچ تی ام ال تموم میشه  */
+}
