--- a/E4/style.css
+++ b/E4/style.css
@@ -26,6 +26,6 @@ a[href^="htpps://"]{
 /* برو ای هایی پیدا که با اچ تی پی پی اس شروع میشود */
 }
 ****************************************************************
-a[href$".html"]{
+a[href$=".html"]{
 /* برو ای هایی را پیدا کن که با دات اچ تی ام ال تموم میشه  */
 }
