--- a/E8/style.css
+++ b/E8/style.css
@@ -1,4 +1,4 @@
 p:first-of-type{/* اولین از نوع پی */
-    background-color: black;
-    color: white;
+    background-color: #000;
+    color: #fff;
 }
