--- a/E10/style.css
+++ b/E10/style.css
@@ -10,3 +10,11 @@ div{
 .div2{
     background-color: #262626;
 }
+
+.div3{
+    background-color: #fed330;/*color from site*/
+}
+
+.div4{
+    background-color: rgb(20, 45, 15);
+}
