--- a/E10/style.css
+++ b/E10/style.css
@@ -18,3 +18,7 @@ div{
 .div4{
     background-color: rgb(20, 45, 15);
 }
+
+.div5{
+    background-color: rgba(211, 84, 0, .6);/* alpha=شفافیت */
+}
