updated in the style.css

--- a/E10/style.css
+++ b/E10/style.css
@@ -22,3 +22,7 @@ div{
 .div5{
     background-color: rgba(211, 84, 0, .6);/* alpha=شفافیت */
 }
+
+.div6{
+    background-color: #ff3333;/* find code color form photoshop */
+}
