text-align=justify

--- a/E11/style.css
+++ b/E11/style.css
@@ -5,3 +5,12 @@
     direction: rtl;
     text-align: center;
 }
+
+.p3{ 
+    direction: rtl;
+    text-align: justify;
+}
+
+.p4{
+    direction: rtl;
+}
