--- a/E13/overflow/style.css
+++ b/E13/overflow/style.css
@@ -1,11 +1,15 @@
 div{
     border: 1px solid #000;
     background: #00e8ff;
-    width: 70px;
-    height: 80px;
+    width: 90px;
+    height: 100px;
     font-family: cursive;
 }
 
 .a{
     overflow: auto;
+}
+
+.b{
+    overflow: scroll;
 }
