--- a/E14/style.css
+++ b/E14/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'byekan';
+	src: url('fonts/IRANSans-Bold.eot') format('eot'),  /* IE6–8 */ url('fonts/IRANSans-Bold.woff2') format('woff2'),  /* Chrome36+, Opera24+*/ url('fonts/IRANSans-Bold.woff') format('woff');  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+	font-weight: bold;
+}/* برای فونت هایی که تعریف نشده استفاده میشود  */
 .a1{
     font-size: 50px;
     font-weight:700 ;/* normal=400 , bold=700 */
